--- a/html/Glass.html
+++ b/html/Glass.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="title" content="KANG MINJE">
+    <meta name="description" content="Website of Photographer Kang Minje">
+    <meta property="og:site_name" content="KANG MINJE">
+    <meta property="og:title" content="KANG MINJE">
+    <meta property="og:description" content="Website of Photographer Kang Minje">
+    <meta name="robots" content=“index”>
+
     <title>Glass</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -2840,7 +2848,10 @@
 
     </script>
     <script type="text/javascript">
-        document.oncontextmenu = function(){return false;}
+        document.oncontextmenu = function() {
+            return false;
+        }
+
     </script>
 </head>
 
@@ -2870,7 +2881,7 @@
         <div id="Sec01">
             <div id="footer">
                 <div id="footerfindme">
-                    <span>Find me:</span>
+                    <span style="top: -10px;">Find me:</span>
                 </div>
                 <div id="footerloc">
                     <span>Republic of Korea</span>
@@ -2882,24 +2893,23 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:info@kangminje.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">info@kangminje.com</a>
+                </div>
+                <div id="footeryoutube">
+                    <a href="https://youtube.com/@kangminjedotfilm?si=yNgnELrLFEhIll_T" target="_blank">Youtube</a>
                 </div>
             </div>
             <div id="dsc">
                 <div id="dscko">
-                    <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
-                    <br>
-                    <br>이것이 제가 이미지를 만드는 이유입니다.
-                    <br>
-                    <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
-                    <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
+                    <span>다양한 매체를 이용한 이미지를 꾀한다.
+                        <br>평면과 입체에서 대상을 뭉치고 끊어내고 포개어
+                        <br>우연히 생겨난 시각적 유희를 즐긴다.
+                    </span>
                 </div>
                 <div id="dscen">
-                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images. 
-                    <br>
-                    <br>This is why I make images.
-                    <br>
-                    <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
+                    <span>
+                        I aim to create images using various media.
+                        <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
                 </div>
             </div>
             <div id="header">
@@ -2912,7 +2922,7 @@
             </div>
         </div>
         <div id="Sec02">
-                      <div id="selectedworks">
+            <div id="selectedworks">
                 <div id="dots">
                     <div class="circle-wrap">
                         <div class="circle"></div>
@@ -3058,6 +3068,7 @@
                         </div>
                     </a>
                 </div>
+                <!--
                 <div id='works'>
                     <div id="yearTheWhiteWall">
                         <span class="yet">soon</span>
@@ -3078,10 +3089,11 @@
                         </div>
                     </a>
                 </div>
+-->
                 <!------->
-                
+
                 <span id="divider_commercial">_</span>
-                
+
                 <div id='works'>
                     <div id="yearbadedu">
                         <span>2022</span>
@@ -3112,13 +3124,23 @@
                         </div>
                     </a>
                 </div>
+                <div id='works'>
+                    <div id="yeartable">
+                        <span>2023</span>
+                    </div>
+                    <a href="table.html">
+                        <div id="workstable">
+                            <span>식탁은 걷는다</span>
+                        </div>
+                    </a>
+                </div>
 
             </div>
         </div>
         <div id="Sec02-1">
             <span id="dscko">2023/01
-            <br>
-            <br>&nbsp;&nbsp;&#171;Glass&#187;
+                <br>
+                <br>&nbsp;&nbsp;&#171;Glass&#187;
             </span>
         </div>
         <div id="Sec03">
