--- a/html/table.html
+++ b/html/table.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Website of Photographer Kang Minje">
     <meta name="robots" content=“index”>
 
-    <title>Dust</title>
+    <title>식탁은 걷는다</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -3068,28 +3068,6 @@
                         </div>
                     </a>
                 </div>
-                <!--
-                <div id='works'>
-                    <div id="yearTheWhiteWall">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="thewhitewall.html">
-                        <div id="worksTheWhiteWall">
-                            <span class="yet">The White Wall</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearSuperposition">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="superposition.html">
-                        <div id="worksSuperposition">
-                            <span class="yet">Superposit296ion</span>
-                        </div>
-                    </a>
-                </div>
--->
                 <!------->
 
                 <span id="divider_commercial">_</span>
@@ -3138,24 +3116,27 @@
             </div>
         </div>
         <div id="Sec02-1">
-            <span id="dscko">2019
+            <span id="dscko">2023/11
                 <br>
-                <br>&nbsp;&nbsp; &#171Dust&#187;
+                <br>&nbsp;&nbsp;책 &#171;식탁은 걷는다&#187;를 위한 사진.
+                <br><br>
+                &nbsp;&nbsp;디자인: 민동인<br>
+                &nbsp;&nbsp;출판: 좀비출판
+                <br><br><br>
+                &nbsp;&nbsp;Photographs for the book &#171;식탁은 걷는다&#187;.
+                <br><br>
+                &nbsp;&nbsp;Design: Dong-in Min<br>
+                &nbsp;&nbsp;Publish: Zombie Press
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/dust/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_02.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_03.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_05.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_06.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_07.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_08.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_09.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_10.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_11.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_12.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_01.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_02.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_03.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_04.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_05.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_06.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_07.png">
         </div>
     </div>
 </body>
