--- a/html/Thrill.html
+++ b/html/Thrill.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="KANG MINJE">
     <meta property="og:description" content="Website of Photographer Kang Minje">
     <meta name="robots" content=“index”>
-    
+
     <title>Thrill</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -2904,12 +2904,12 @@
                     <span>다양한 매체를 이용한 이미지를 꾀한다.
                         <br>평면과 입체에서 대상을 뭉치고 끊어내고 포개어
                         <br>우연히 생겨난 시각적 유희를 즐긴다.
-                        </span>
+                    </span>
                 </div>
                 <div id="dscen">
                     <span>
                         I aim to create images using various media.
-                    <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
+                        <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
                 </div>
             </div>
             <div id="header">
@@ -3058,7 +3058,7 @@
                 </div>
                 <!------>
 
-<!--
+                
                 <div id='works'>
                     <div id="yearSuseok">
                         <span class="yet">soon</span>
@@ -3069,6 +3069,7 @@
                         </div>
                     </a>
                 </div>
+<!--
                 <div id='works'>
                     <div id="yearTheWhiteWall">
                         <span class="yet">soon</span>
@@ -3090,6 +3091,7 @@
                     </a>
                 </div>
 -->
+
                 <!------->
 
                 <span id="divider_commercial">_</span>
@@ -3121,6 +3123,16 @@
                     <a href="dd.html">
                         <div id="worksdd">
                             <span>스몰 스튜디오, 스몰 신, 대전, 대구</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yeartable">
+                        <span>2023</span>
+                    </div>
+                    <a href="table.html">
+                        <div id="workstable">
+                            <span>식탁은 걷는다</span>
                         </div>
                     </a>
                 </div>
