--- a/html/table.html
+++ b/html/table.html
@@ -3131,12 +3131,12 @@
         </div>
         <div id="Sec03">
             <img class="imgs_hori" src="../srcs/img/table/img_01.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_02.png">
-            <img class="imgs_hori" src="../srcs/img/table/img_03.png">
-            <img class="imgs_hori" src="../srcs/img/table/img_04.png">
-            <img class="imgs_hori" src="../srcs/img/table/img_05.png">
-            <img class="imgs_hori" src="../srcs/img/table/img_06.png">
-            <img class="imgs_hori" src="../srcs/img/table/img_07.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_02.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_03.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_04.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_05.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_06.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_07.jpg">
         </div>
     </div>
 </body>
