--- a/html/Gemstone.html
+++ b/html/Gemstone.html
@@ -2898,19 +2898,15 @@
             </div>
             <div id="dsc">
                 <div id="dscko">
-                    <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
-                        <br>
-                        <br>이것이 제가 이미지를 만드는 이유입니다.
-                        <br>
-                        <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
-                        <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
+                    <span>다양한 매체를 이용한 이미지를 꾀한다.
+                        <br>평면과 입체에서 대상을 뭉치고 끊어내고 포개어
+                        <br>우연히 생겨난 시각적 유희를 즐긴다.
+                    </span>
                 </div>
                 <div id="dscen">
-                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images.
-                        <br>
-                        <br>This is why I make images.
-                        <br>
-                        <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
+                    <span>
+                        I aim to create images using various media.
+                        <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
                 </div>
             </div>
             <div id="header">
