--- a/html/Drowning.html
+++ b/html/Drowning.html
@@ -2981,7 +2981,7 @@
                     </div>
                     <a href="flyingbobs.html">
                         <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                            <span>Flying Bobs</span>
                         </div>
                     </a>
                 </div>
@@ -3172,13 +3172,13 @@
             </span>
         </div>
         <div id="Sec03">
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_01.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_02.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_03.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_04.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_05.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_06.mov" autoplay loop muted></video>
-            <video class="imgs_hori" src="../srcs/img/Drowning/drowning_07.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_01.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_02.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_03.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_04.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_05.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_06.mov" autoplay loop muted></video>
+            <video class="imgs_hori" id="vid" src="../srcs/img/Drowning/drowning_07.mov" autoplay loop muted></video>
 
         </div>
     </div>
