--- a/html/Gemstone.html
+++ b/html/Gemstone.html
@@ -5,14 +5,6 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="title" content="KANG MINJE">
-    <meta name="description" content="Website of Photographer Kang Minje">
-    <meta property="og:site_name" content="KANG MINJE">
-    <meta property="og:title" content="KANG MINJE">
-    <meta property="og:description" content="Website of Photographer Kang Minje">
-    <meta name="robots" content=“index”>
-    
     <title>Gemstone</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -2881,7 +2873,7 @@
         <div id="Sec01">
             <div id="footer">
                 <div id="footerfindme">
-                    <span>Find me:</span>
+                    <span style="top: -10px;">Find me:</span>
                 </div>
                 <div id="footerloc">
                     <span>Republic of Korea</span>
@@ -2893,7 +2885,10 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:info@kangminje.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">info@kangminje.com</a>
+                </div>
+                <div id="footeryoutube">
+                    <a href="https://youtube.com/@kangminjedotfilm?si=yNgnELrLFEhIll_T" target="_blank">Youtube</a>
                 </div>
             </div>
             <div id="dsc">
@@ -2963,12 +2958,22 @@
                     </a>
                 </div>
                 <div id='works'>
+                    <div id="yearDrowning">
+                        <span>2024</span>
+                    </div>
+                    <a href="Drowning.html">
+                        <div id="worksDrowning">
+                            <span>Drowning</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
                     <div id="yearFlyingBobs">
                         <span>2023</span>
                     </div>
                     <a href="flyingbobs.html">
                         <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                            <span>Flying Bobs</span>
                         </div>
                     </a>
                 </div>
@@ -3065,6 +3070,7 @@
                         </div>
                     </a>
                 </div>
+                <!--
                 <div id='works'>
                     <div id="yearTheWhiteWall">
                         <span class="yet">soon</span>
@@ -3085,6 +3091,7 @@
                         </div>
                     </a>
                 </div>
+-->
                 <!------->
 
                 <span id="divider_commercial">_</span>
