--- a/html/table.html
+++ b/html/table.html
@@ -2966,12 +2966,22 @@
                     </a>
                 </div>
                 <div id='works'>
+                    <div id="yearDrowning">
+                        <span>2024</span>
+                    </div>
+                    <a href="Drowning.html">
+                        <div id="worksDrowning">
+                            <span>Drowning</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
                     <div id="yearFlyingBobs">
                         <span>2023</span>
                     </div>
                     <a href="flyingbobs.html">
                         <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                            <span>Flying Bobs</span>
                         </div>
                     </a>
                 </div>
@@ -3131,12 +3141,12 @@
         </div>
         <div id="Sec03">
             <img class="imgs_hori" src="../srcs/img/table/img_01.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_02.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_03.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_04.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_05.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_06.jpg">
-            <img class="imgs_hori" src="../srcs/img/table/img_07.jpg">
+            <img class="imgs_hori" src="../srcs/img/table/img_02.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_03.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_04.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_05.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_06.png">
+            <img class="imgs_hori" src="../srcs/img/table/img_07.png">
         </div>
     </div>
 </body>
