--- a/html/afterglow.html
+++ b/html/afterglow.html
@@ -2966,12 +2966,22 @@
                     </a>
                 </div>
                 <div id='works'>
+                    <div id="yearDrowning">
+                        <span>2024</span>
+                    </div>
+                    <a href="Drowning.html">
+                        <div id="worksDrowning">
+                            <span>Drowning</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
                     <div id="yearFlyingBobs">
                         <span>2023</span>
                     </div>
                     <a href="flyingbobs.html">
                         <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                            <span>Flying Bobs</span>
                         </div>
                     </a>
                 </div>
