--- a/html/flyingbobs.html
+++ b/html/flyingbobs.html
@@ -2966,12 +2966,22 @@
                     </a>
                 </div>
                 <div id='works'>
+                    <div id="yearDrowning">
+                        <span>2024</span>
+                    </div>
+                    <a href="Drowning.html">
+                        <div id="worksDrowning">
+                            <span>Drowning</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
                     <div id="yearFlyingBobs">
                         <span>2023</span>
                     </div>
                     <a href="flyingbobs.html">
                         <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                            <span>Flying Bobs</span>
                         </div>
                     </a>
                 </div>
@@ -3148,22 +3158,38 @@
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_01.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_02.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_03.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_04.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_05.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_06.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_07.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_08.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_09.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_10.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_11.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_12.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_13.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_14.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_15.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_16.PNG">
+<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_01.PNG">-->
+            <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_01.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_02.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_02.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_03.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_03.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_04.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_04.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_05.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_05.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_06.PNG">-->
+            <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_06.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_07.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_07.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_08.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_08.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_09.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_09.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_10.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_10.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_11.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_11.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_12.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_12.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_13.PNG">-->
+            <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_13.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_14.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_14.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_15.PNG">-->
+            <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_15.mp4" autoplay loop muted></video>
+<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_16.PNG">-->
+            <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_16.mp4" autoplay loop muted></video>
         </div>
     </div>
 </body>
