--- a/html/Thrill.html
+++ b/html/Thrill.html
@@ -15,7 +15,7 @@
 
     <title>Thrill</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style_etc.css">
 
     <script id="applicationScript">
         ///////////////////////////////////////
@@ -2955,36 +2955,7 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div id='works'>
-                    <div id="yearPortraits">
-                        <span>2021~</span>
-                    </div>
-                    <a href="portraits.html">
-                        <div id="worksPortraits">
-                            <span>Portraits</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearDrowning">
-                        <span>2024</span>
-                    </div>
-                    <a href="Drowning.html">
-                        <div id="worksDrowning">
-                            <span>Drowning</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearFlyingBobs">
-                        <span>2023</span>
-                    </div>
-                    <a href="flyingbobs.html">
-                        <div id="worksFlyingBobs">
-                            <span>Flying Bobs</span>
-                        </div>
-                    </a>
-                </div>
+
                 <div id="works">
                     <div id="yearDust">
                         <span>2020</span>
@@ -3068,7 +3039,6 @@
                 </div>
                 <!------>
 
-                
                 <div id='works'>
                     <div id="yearSuseok">
                         <span class="yet">soon</span>
@@ -3079,32 +3049,7 @@
                         </div>
                     </a>
                 </div>
-<!--
-                <div id='works'>
-                    <div id="yearTheWhiteWall">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="thewhitewall.html">
-                        <div id="worksTheWhiteWall">
-                            <span class="yet">The White Wall</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearSuperposition">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="superposition.html">
-                        <div id="worksSuperposition">
-                            <span class="yet">Superposit296ion</span>
-                        </div>
-                    </a>
-                </div>
--->
-
-                <!------->
-
-                <span id="divider_commercial">_</span>
+                <span id="divider_commercial"></span>
 
                 <div id='works'>
                     <div id="yearbadedu">
@@ -3146,6 +3091,15 @@
                         </div>
                     </a>
                 </div>
+
+                <div id="works">
+                    <a href="home_pc.html">
+                        <div id="yearetc">
+                            <span>&larr; selected works</span>
+                        </div>
+                    </a>
+                </div>
+
 
             </div>
         </div>
