--- a/html/dd.html
+++ b/html/dd.html
@@ -15,7 +15,7 @@
 
     <title>스몰 스튜디오, 스몰 신, 대전, 대구</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style_etc.css">
 
     <script id="applicationScript">
         ///////////////////////////////////////
@@ -2952,36 +2952,7 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div id='works'>
-                    <div id="yearPortraits">
-                        <span>2021~</span>
-                    </div>
-                    <a href="portraits.html">
-                        <div id="worksPortraits">
-                            <span>Portraits</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearDrowning">
-                        <span>2024</span>
-                    </div>
-                    <a href="Drowning.html">
-                        <div id="worksDrowning">
-                            <span>Drowning</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearFlyingBobs">
-                        <span>2023</span>
-                    </div>
-                    <a href="flyingbobs.html">
-                        <div id="worksFlyingBobs">
-                            <span>Flying Bobs</span>
-                        </div>
-                    </a>
-                </div>
+
                 <div id="works">
                     <div id="yearDust">
                         <span>2020</span>
@@ -3075,9 +3046,7 @@
                         </div>
                     </a>
                 </div>
-                <!------->
-
-                <span id="divider_commercial">_</span>
+                <span id="divider_commercial"></span>
 
                 <div id='works'>
                     <div id="yearbadedu">
@@ -3109,15 +3078,25 @@
                         </div>
                     </a>
                 </div>
-                <div id="yeartable">
-                    <span>2023</span>
-                </div>
-                <a href="table.html">
-                    <div id="workstable">
-                        <span>식탁은 걷는다</span>
+                <div id='works'>
+                    <div id="yeartable">
+                        <span>2023</span>
                     </div>
-                </a>
-            </div>
+                    <a href="table.html">
+                        <div id="workstable">
+                            <span>식탁은 걷는다</span>
+                        </div>
+                    </a>
+                </div>
+
+                <div id="works">
+                    <a href="home_pc.html">
+                        <div id="yearetc">
+                            <span>&larr; selected works</span>
+                        </div>
+                    </a>
+                </div>
+
 
         </div>
     </div>
