--- a/html/etc.html
+++ b/html/etc.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Website of Photographer Kang Minje">
     <meta name="robots" content=“index”>
 
-    <title>Ecstasy</title>
+    <title>Kang Minje</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style_etc.css">
 
@@ -2923,7 +2923,7 @@
         </div>
         <div id="Sec02">
             <div id="selectedworks">
-               <div id="dots">
+                <div id="dots">
                     <div class="circle-wrap">
                         <div class="circle"></div>
                     </div>
@@ -3100,21 +3100,11 @@
                     </a>
                 </div>
 
-
             </div>
         </div>
-        <div id="Sec02-1">
-            <span id="dscko">2023/08
-                <br>
-                <br>&nbsp;&nbsp;&#171;Ecstasy&#187;
-
-            </span>
-        </div>
-        <div id="Sec03">
-            <img class="imgs_hori" src="../srcs/img/ecstasy/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/ecstasy/img_02.jpg">
-            <img class="imgs_vert" src="../srcs/img/ecstasy/img_03.jpg">
-            <img class="imgs_hori" src="../srcs/img/ecstasy/img_04.jpg">
+        <div id="Sec03" style="position: fixed">
+            <img class="imgs_hori" src="../srcs/blank.jpg">
+            <img class="imgs_hori" src="../srcs/blank.jpg">
         </div>
     </div>
 </body>
