--- a/html/flyingbobs.html
+++ b/html/flyingbobs.html
@@ -2966,6 +2966,16 @@
                     </a>
                 </div>
                 <div id='works'>
+                    <div id="yearSP">
+                        <span>2023~</span>
+                    </div>
+                    <a href="sp.html">
+                        <div id="worksSP">
+                            <span>Superposition</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
                     <div id="yearDrowning">
                         <span>2024</span>
                     </div>
@@ -2985,166 +2995,23 @@
                         </div>
                     </a>
                 </div>
-                <div id="works">
-                    <div id="yearDust">
-                        <span>2020</span>
-                    </div>
-                    <a href="dust.html">
-                        <div id="worksDust">
-                            <span>Dust</span>
-                        </div>
-                    </a>
-                </div>
                 <div id='works'>
-                    <div id="yearAfterglow">
-                        <span>2019</span>
-                    </div>
-                    <a href="afterglow.html">
-                        <div id="worksAfterglow">
-                            <span>Afterglow</span>
-                        </div>
-                    </a>
-                </div>
-
-                <div id='works'>
-                    <div id="yearGlass">
+                    <div id="yearih">
                         <span>2023</span>
                     </div>
-                    <a href="glass.html">
-                        <div id="worksGlass">
-                            <span>Glass</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearCactus">
-                        <span>2023</span>
-                    </div>
-                    <a href="Cactus.html">
-                        <div id="worksCactus">
-                            <span>Cactus</span>
+                    <a href="ih.html">
+                        <div id="worksih">
+                            <span>이미지하나비</span>
                         </div>
                     </a>
                 </div>
                 <div id="works">
-                    <div id="yearGemstone">
-                        <span>2023</span>
-                    </div>
-                    <a href="Gemstone.html">
-                        <div id="worksGemstone">
-                            <span>Gemstone</span>
+                    <a href="etc.html">
+                        <div id="yearetc">
+                            <span>&rarr; other works + commercial</span>
                         </div>
                     </a>
                 </div>
-                <div id='works'>
-                    <div id="yearThrill">
-                        <span>2023</span>
-                    </div>
-                    <a href="Thrill.html">
-                        <div id="worksThrill">
-                            <span>Thrill</span>
-                        </div>
-                    </a>
-                </div>
-                <div id="works">
-                    <div id="yearConflict">
-                        <span>2023</span>
-                    </div>
-                    <a href="Conflict.html">
-                        <div id="worksConflict">
-                            <span>Conflict</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearEcstasy">
-                        <span>2023</span>
-                    </div>
-                    <a href="Ecstasy.html">
-                        <div id="worksEcstasy">
-                            <span>Ecstasy</span>
-                        </div>
-                    </a>
-                </div>
-                <!------>
-
-                <div id='works'>
-                    <div id="yearSuseok">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="suseok.html">
-                        <div id="worksSuseok">
-                            <span class="yet">Suseok</span>
-                        </div>
-                    </a>
-                </div>
-                <!--
-                <div id='works'>
-                    <div id="yearTheWhiteWall">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="thewhitewall.html">
-                        <div id="worksTheWhiteWall">
-                            <span class="yet">The White Wall</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearSuperposition">
-                        <span class="yet">soon</span>
-                    </div>
-                    <a href="superposition.html">
-                        <div id="worksSuperposition">
-                            <span class="yet">Superposit296ion</span>
-                        </div>
-                    </a>
-                </div>
--->
-                <!------->
-
-                <span id="divider_commercial">_</span>
-
-                <div id='works'>
-                    <div id="yearbadedu">
-                        <span>2022</span>
-                    </div>
-                    <a href="badedu.html">
-                        <div id="worksbadedu">
-                            <span>나쁜교육</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yearsejong">
-                        <span>2022</span>
-                    </div>
-                    <a href="sejong.html">
-                        <div id="workssejong">
-                            <span>우왕좌왕세종대왕</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yeardd">
-                        <span>2022</span>
-                    </div>
-                    <a href="dd.html">
-                        <div id="worksdd">
-                            <span>스몰 스튜디오, 스몰 신, 대전, 대구</span>
-                        </div>
-                    </a>
-                </div>
-                <div id='works'>
-                    <div id="yeartable">
-                        <span>2023</span>
-                    </div>
-                    <a href="table.html">
-                        <div id="workstable">
-                            <span>식탁은 걷는다</span>
-                        </div>
-                    </a>
-                </div>
-
             </div>
         </div>
         <div id="Sec02-1">
@@ -3158,37 +3025,37 @@
             </span>
         </div>
         <div id="Sec03">
-<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_01.PNG">-->
+            <!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_01.PNG">-->
             <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_01.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_02.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_02.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_02.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_03.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_03.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_03.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_04.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_04.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_04.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_05.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_05.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_05.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_06.PNG">-->
+            <!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_06.PNG">-->
             <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_06.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_07.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_07.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_07.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_08.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_08.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_08.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_09.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_09.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_09.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_10.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_10.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_10.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_11.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_11.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_11.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_12.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_12.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_12.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_13.PNG">-->
+            <!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_13.PNG">-->
             <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_13.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_14.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_14.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_14.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_15.PNG">-->
+            <!--            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_15.PNG">-->
             <video class="imgs_vert" id="vid" src="../srcs/img/flyingbobs/Clip_15.mp4" autoplay loop muted></video>
-<!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_16.PNG">-->
+            <!--            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_16.PNG">-->
             <video class="imgs_hori" id="vid" src="../srcs/img/flyingbobs/Clip_16.mp4" autoplay loop muted></video>
         </div>
     </div>
