--- a/html/sp.html
+++ b/html/sp.html
@@ -200,13 +200,13 @@
             </div>
         </div>
         <div id="Sec03">
-            <img class="imgs_hori" src="../srcs/img/sp/img_01.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_02.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_03.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_04.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_05.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_06.jpg">
-            <img class="imgs_hori" src="../srcs/img/sp/img_07.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_01.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_02.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_03.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_04.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_05.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_06.jpg">
+            <img class="imgs_hori" src="../srcs/img/sp/IMG_07.jpg">
 
         </div>
     </div>
