--- a/html/portraits.html
+++ b/html/portraits.html
@@ -3025,8 +3025,8 @@
         <img class="imgs_vert" src="../srcs/img/portraits/IMG_43.jpg">
         <img class="imgs_vert" src="../srcs/img/portraits/IMG_42.jpg">
         <img class="imgs_vert" src="../srcs/img/portraits/IMG_41.jpg">
-        <img class="imgs_vert" src="../srcs/img/portraits/img_40.JPG">
-        <img class="imgs_vert" src="../srcs/img/portraits/img_39.JPG">
+        <img class="imgs_vert" src="../srcs/img/portraits/img_40.jpg">
+        <img class="imgs_vert" src="../srcs/img/portraits/img_39.jpg">
         <img class="imgs_tri" src="../srcs/img/portraits/IMG_38.jpg">
         <img class="imgs_tri" src="../srcs/img/portraits/IMG_37.jpg">
         <img class="imgs_tri" src="../srcs/img/portraits/IMG_36.jpg">
