--- a/html/dd.html
+++ b/html/dd.html
@@ -2896,17 +2896,16 @@
                     <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
                 </div>
             </div>
-             <div id="dsc">
+                         <div id="dsc">
                 <div id="dscko">
-                    <span>다양한 매체를 이용한 이미지를 꾀한다.
-                        <br>평면과 입체에서 대상을 뭉치고 끊어내고 포개어
-                        <br>우연히 생겨난 시각적 유희를 즐긴다.
+                    <span>다양한 이미지 속의 내러티브를 공유하길 꾀한다.
+                        <br>그리고, 평면과 입체에서 대상을 뭉치고 끊어내고
+                        <br>포개어 우연히 생겨난 시각적 유희를 선보인다.
                     </span>
                 </div>
                 <div id="dscen">
                     <span>
-                        I aim to create images using various media.
-                        <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
+                        I strive to share the narratives found within <br>diverse images. Additionally, I showcase visual playfulness<br> that arises serendipitously by clustering, fragmenting, and unfolding subjects in both two-dimensional and three-dimensional space.</span>
                 </div>
             </div>
             <div id="header">
